--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
+  "name": "upon-review",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "snowpack dev",
+    "cssWatch": "sass --watch src/scss/:dist/css/",
+    "start": "HTTPS=true SSL_CRT_FILE=cert.pem SSL_KEY_FILE=key.pem PORT=8000 BROWSER='firefox developer edition' snowpack dev",
     "build": "snowpack build",
     "test": "web-test-runner \"src/**/*.test.jsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx}\""
   },
+  "proxy": "http://localhost:8081",
   "dependencies": {
+    "@snowpack/plugin-sass": "^1.4.0",
+    "axios": "^1.4.0",
+    "dotenv": "^16.1.3",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.44.2",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
