continue debugging category context

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "upon-review",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "cssWatch": "sass --watch src/scss/:dist/css/",
     "start": "HTTPS=true SSL_CRT_FILE=cert.pem SSL_KEY_FILE=key.pem PORT=8080 BROWSER='firefox developer edition' snowpack dev",
