--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-proxy-middleware": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.11.2"
