--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-PROXY_URL = 'http://localhost:8081'
+SNOWPACK_PUBLIC_ENABLE_FEATURE=true
+SNOWPACK_PUBLIC_TITLE=Future Self Upon Review
+SNOWPACK_PUBLIC_DESCRIPTION=A personal reviewing tool for your future self
+
+
+SNOWPACK_PUBLIC_PROXY_URL=http://localhost:8081
+SNOWPACK_PUBLIC_BASE_URL=http://localhost:8081
+SNOWPACK_PUBLIC_REACT_URL=http://localhost:8080
