--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "proxy": "http://localhost:8081",
   "dependencies": {
     "@snowpack/plugin-sass": "^1.4.0",
+    "@tanstack/react-query": "^4.36.1",
     "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "http-proxy-middleware": "^2.0.6",
@@ -25,9 +26,10 @@
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
-    "@snowpack/plugin-dotenv": "^2.1.0",
+    "@snowpack/plugin-dotenv": "^2.2.0",
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/web-test-runner-plugin": "^0.2.2",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@testing-library/react": "^11.2.6",
     "@web/test-runner": "^0.13.3",
     "chai": "^4.3.4",
