--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "type": "module",
   "scripts": {
     "cssWatch": "sass --watch src/scss/:dist/css/",
-    "start": "HTTPS=true SSL_CRT_FILE=cert.pem SSL_KEY_FILE=key.pem PORT=8080 BROWSER='firefox developer edition' snowpack dev",
-    "build": "snowpack build",
-    "test": "web-test-runner \"src/**/*.test.jsx\"",
-    "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx}\""
+    "dev": "vite --clearScreen=false",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "proxy": "http://localhost:8081",
   "dependencies": {
-    "@snowpack/plugin-sass": "^1.4.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.0",
     "@tanstack/react-query": "^4.36.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "react": "^17.0.2",
@@ -25,14 +27,10 @@
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
-    "@snowpack/plugin-dotenv": "^2.2.0",
-    "@snowpack/plugin-react-refresh": "^2.5.0",
-    "@snowpack/web-test-runner-plugin": "^0.2.2",
     "@tanstack/react-query-devtools": "^4.36.1",
     "@testing-library/react": "^11.2.6",
     "@web/test-runner": "^0.13.3",
     "chai": "^4.3.4",
-    "prettier": "^2.2.1",
-    "snowpack": "^3.3.7"
+    "prettier": "^2.2.1"
   }
 }
