--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.8",
     "@mui/material": "^5.15.0",
     "@tanstack/react-query": "^4.36.1",
     "@vitejs/plugin-react": "^4.2.1",
