--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.8",
     "@mui/material": "^5.15.0",
+    "@mui/x-data-grid": "^6.19.4",
     "@tanstack/react-query": "^4.36.1",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.4.0",
