--- a/package.json
+++ b/package.json
@@ -12,26 +12,27 @@
   },
   "proxy": "http://localhost:8081",
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.8",
-    "@mui/material": "^5.15.0",
-    "@mui/x-data-grid": "^6.19.4",
-    "@tanstack/react-query": "^4.36.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.2.0",
+    "@tanstack/react-query": "^5.29.2",
     "@vitejs/plugin-react": "^4.2.1",
-    "axios": "^1.4.0",
-    "dotenv": "^16.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-error-boundary": "^4.0.11",
-    "react-hook-form": "^7.44.2",
-    "react-icons": "^4.10.1",
-    "react-router-dom": "^6.11.2"
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.1.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@testing-library/react": "^11.2.6",
-    "@web/test-runner": "^0.13.3",
-    "chai": "^4.3.4",
-    "prettier": "^2.2.1"
+    "@testing-library/react": "^15.0.2",
+    "@web/test-runner": "^0.18.1",
+    "chai": "^5.1.0",
+    "prettier": "^3.2.5",
+    "sass": "^1.75.0"
   }
 }
