--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.2.0",
     "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query-devtools": "^5.45.1",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
@@ -29,7 +30,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^15.0.2",
-    "@web/test-runner": "^0.18.1",
+    "@web/test-runner": "^0.10.1",
     "chai": "^5.1.0",
     "prettier": "^3.2.5",
     "sass": "^1.75.0"
